[package]
name = "zenpipe-demo"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]
parallel = ["dep:rayon", "dep:wasm-bindgen-rayon"]

[dependencies]
# Platform-agnostic editor model + controller (handles decode, encode, rendering)
zeneditor = { path = "../../../zeneditor" }

# Codec types for format detection in WASM glue
zencodec = { version = "0.1.12", default-features = false }

serde_json = "1"

# Multithreaded WASM via rayon (optional — requires SharedArrayBuffer + COOP/COEP)
rayon = { version = "1.10", optional = true }
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"], optional = true }

# WASM-specific deps (optional for native testing)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["ImageData"], optional = true }

[patch.crates-io]
zennode = { path = "../../../zennode/zennode" }
zennode-derive = { path = "../../../zennode/zennode-derive" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
strip = true
